test/2/parse/bare-semicolon.err
test/2/parse/bare-semicolon.ploy:1:1-2: parse error: unexpected terminator token: `;`
| ;
  ~
